@@ -135,11 +135,24 @@
 			<br>
 
 			<div style="text-align: center;">
+				<img style="width: 50%; height: 50%;" src="/img/screenshots/sorow-template.png" alt="デフォルトUI PSD">
+				<br>
+				<h3>デフォルトUI Photoshopデータ</h3>
+				<p>
+					コア開発者・ソロー提供のデフォルトUIのPhotoshopデータです。<br>
+					<a href="/dl/material/sorow-template-psd.zip">Photoshop ZIPダウンロード</a>
+				</p>
+			</div>
+
+			<hr>
+			<br>
+
+			<div style="text-align: center;">
 				<img style="width: 50%; height: 50%;" src="/img/screenshots/tategaki.png" alt="縦書きUI PSD">
 				<br>
 				<h3>縦書きUI Photoshopデータ</h3>
 				<p>
-					コア開発者・あさつきによる縦書きUIの、Photoshopデータです。<br>
+					コア開発者・あさつき提供の縦書きUIのPhotoshopデータです。<br>
 					<a href="/dl/material/tategaki_cg.zip">Photoshop ZIPダウンロード</a>
 				</p>
 			</div>
